--- a/requirements.yml
+++ b/requirements.yml
@@ -2,7 +2,7 @@
 functional:
   - Пользователь должен иметь возможность искать товары по ключевому слову или категории
   - Пользователь должен иметь возможность фильтровать товары
-  - Пользователь должен иметь возможность просматривать товары и просматривать подробную информацию о товаре
+  - Пользователь должен иметь возможность просматривать товары и подробную информацию о товаре
   - Пользователь должен иметь возможность добавлять товары в корзину и просматривать содержимое корзины
   - Пользователь должен иметь возможность переключить язык интерфейса
   - Сайт должен иметь локализацию (перевод) на русский и английский языки
@@ -21,9 +21,9 @@ implicit:
   - Возможность интеграции с платежными системами
   - Выводится список товаров
   - У каждого товара указана цена
-  -	У каждого товара есть кнопка для заказа товара
-  - При нажатии на кнопку заказа товара, открывается модальное окно, где можно ввести количество товара
-  -	В модальном окне с вводом количества есть кнопка подтверждения заказа
+  - У каждого товара есть кнопка для заказа товара
+  - При нажатии на кнопку заказа товара открывается модальное окно, где можно ввести количество товара
+  - В модальном окне с вводом количества есть кнопка подтверждения заказа
   - В модальном окне с вводом количества есть кнопка отмены заказа
   - Выводится список заказов
   - Для каждого заказа выводится дата заказа
