--- a/test-cases.yml
+++ b/test-cases.yml
@@ -103,7 +103,7 @@
 - summary: |
     Проверка переключения языка интерфейса
   requirement: |
-    При смене языка текст отображается корректно на выбранном языке и не менятеся при перезагрузке страницы, переключениями между страницами
+    При смене языка текст отображается корректно на выбранном языке и не менятеся при переключениями между страницами
   prerequisites: |
     Пользователь находится на главной странице магазина, сайт поддерживает русский и английский язык
   test-data: |
@@ -112,10 +112,10 @@
     - Кликнуть на переключатель языка (смена на английский)
     - Проверить несколько ключевых элементов (например, "Корзина" → "Cart", "Каталог" → "Catalog")
     - Кликнуть на переключатель языка (смена на русский)
-    - Обновить страницу (F5)
+    - Перейти на следующую страницу
     - Перейти в раздел (например, "Каталог"), сменить язык
   expected-result: |
-    Языки переключаются и отображаются корректно, после обновления сохраняется выбранный язык. Шапка, меню, основные кнопки меняют язык
+    Языки переключаются и отображаются корректно, после перехода сохраняется выбранный язык. Шапка, меню, основные кнопки меняют язык
 ---   
 - summary: |
     Фильтрация по одному бренду
@@ -147,7 +147,7 @@
 - summary: |
     Сброс фильтра
   requirement: |
-    Все товары должны снова отображаться в полном объеме
+    Все товары должны снова отображаться в полном объеме, должна присутствовать кнопка сброса фильтра
   prerequisites: |
     Фильтры активны
   test-data: |
@@ -289,7 +289,7 @@
   prerequisites: |
     Пользователь находится в разделе "Каталог" интернет-магазина
   test-data: |
-    fessence
+    essence
     0-10
     чекбокс "в наличии"
   steps:
@@ -325,20 +325,7 @@
     Отображается сообщение "Ничего не найдено"
 ---
 - summary: |
-    Автодоплнение в поиске
-  requirement: |
-    При начале ввода слова, система подсказывает продолжение
-  prerequisites: |
-    Пользователь находится в разделе "Каталог" интернет-магазина
-  test-data: |
-    Esse
-  steps:
-    - Начать вводить запрос
-  expected-result: |
-    Появляются подсказки Essence
----
-- summary: |
-    Автодоплнение в поиске
+    Автодополнение в поиске
   requirement: |
     При начале ввода слова, система подсказывает продолжение
   prerequisites: |
