--- a/test-cases.yml
+++ b/test-cases.yml
@@ -397,7 +397,7 @@
 - summary: |
     Изменение состава заказа на этапе оформления
   requirement: |
-    При изменении состава заказа сумма должна переситываться и товар исчезает из корзины
+    При изменении состава заказа сумма должна пересчитываться и товар исчезает из корзины
   prerequisites: |
     В корзине есть 2 товара
   test-data: |
