--- a/test-cases.yml
+++ b/test-cases.yml
@@ -12,7 +12,7 @@
     - Вводим пароль
     - Нажимаем кнопку «Войти»
   expected-result: |
-    Пользователь должен попасть на главную страницу
+     Пользователь успешно проходит аутентификацию и перенаправляется на главную страницу
 
 - summary: |
     Проверка входа пользователя с несуществующими логином и паролем
@@ -27,7 +27,7 @@
     - Вводим пароль
     - Нажимаем кнопку «Войти»
   expected-result: |
-    Пользователь должен попасть на главную страницу
+    Отображается сообщение об ошибке «Неверный логин или пароль»
 
 - summary: |
     Успешная регистрация пользователя
@@ -49,10 +49,10 @@
     - Подтверждаем пароль
     - Нажимаем кнопку «Зарегестрироваться»
   expected-result: |
-    Должна появляться форма с успешной регистрацией на платформе
+    Отображается сообщение «Регистрация успешна», происходит переход в личный кабинет пользователя
 
 - summary: |
-    Добавление товара в корзину
+    Добавление товара в корзину с пустой корзиной
   requirement: |
     При добавлении товара в корзину должно появляться окно с указанием количества товаров и кнопкой "Заказать"
   prerequisites: |
@@ -60,7 +60,7 @@
   test-data: |
     Список товаров в магазине
   steps:
-    - Нажать кнопку "В корзину" на случайном товаре из списка
+    - Нажать кнопку «В корзину» на любом товаре из списка
     - Ввести любое количество товара в модальном окне добавления товара
     - Нажать кнопку "В корзину" в модальном окне добавления товара
     - Нажать кнопку "Корзина" в правом верхнем углу
@@ -115,7 +115,7 @@
     - Перейти на следующую страницу
     - Перейти в раздел (например, "Каталог"), сменить язык
   expected-result: |
-    Языки переключаются и отображаются корректно, после перехода сохраняется выбранный язык. Шапка, меню, основные кнопки меняют язык
+    После переключения языка в шапке отображается «Cart» вместо «Корзина» (или аналогично для других элементов); выбранный язык сохраняется при переходе на другие страницы
   
 - summary: |
     Фильтрация по одному бренду
@@ -254,7 +254,7 @@
   steps:
     - в поиске указать точное название товара
   expected-result: |
-    Отображается карточка этого товара или он первый в списке
+    Отображается карточка по совпадению названия этого товара
 
 - summary: |
     Поиск по части названия
