обновление тест-кейсов

--- a/test-cases.yml
+++ b/test-cases.yml
@@ -12,7 +12,7 @@
     - Вводим пароль
     - Нажимаем кнопку «Войти»
   expected-result: |
-     Пользователь успешно проходит аутентификацию и перенаправляется на главную страницу
+    Пользователь успешно проходит аутентификацию и перенаправляется на главную страницу
 
 - summary: |
     Проверка входа пользователя с несуществующими логином и паролем
@@ -30,29 +30,7 @@
     Отображается сообщение об ошибке «Неверный логин или пароль»
 
 - summary: |
-    Успешная регистрация пользователя
-  requirement: |
-    При верном вводе данных пользователь должен зарегестрироваться в личном кабинете магазина
-  prerequisites: |
-    Открыта страница регистрации пользователя
-  test-data: |
-    Имя Фамилия = Ivan Ivanov
-    Номер телефона = +71111111111
-    E-mail пользователя = ivan@ivanov.com
-    Пароль = edX*12
-    Подтвердите пароль = edX*12
-  steps:
-    - Вводим Имя Фамилия
-    - Вводим номер телефона
-    - Вводим E-mail
-    - Вводим пароль
-    - Подтверждаем пароль
-    - Нажимаем кнопку «Зарегестрироваться»
-  expected-result: |
-    Отображается сообщение «Регистрация успешна», происходит переход в личный кабинет пользователя
-
-- summary: |
-    Добавление товара в корзину с пустой корзиной
+    Добавление товара в пустую корзину 
   requirement: |
     При добавлении товара в корзину должно появляться окно с указанием количества товаров и кнопкой "Заказать"
   prerequisites: |
@@ -116,7 +94,7 @@
     - Перейти в раздел (например, "Каталог"), сменить язык
   expected-result: |
     После переключения языка в шапке отображается «Cart» вместо «Корзина» (или аналогично для других элементов); выбранный язык сохраняется при переходе на другие страницы
-  
+ 
 - summary: |
     Фильтрация по одному бренду
   requirement: |
@@ -254,7 +232,7 @@
   steps:
     - в поиске указать точное название товара
   expected-result: |
-    Отображается карточка по совпадению названия этого товара
+    Отображается карточка товара по полному совпадению названия
 
 - summary: |
     Поиск по части названия
