--- a/test-cases.yml
+++ b/test-cases.yml
@@ -31,8 +31,8 @@
     - Открыть DevTools в браузере.
     - Включить режим эмуляции устройства («Toggle device toolbar»).
     - Выбрать первое тестируемое устройство (например, iPhone SE).
-    - Проверить корректность отображения: все элементы помещаются в экран, текст читаемый, кнопки кликабельны.
-    - Повторить шаги для других устройств: iPhone 12 Pro, iPad Air.
+    - Проверить корректность отображения - все элементы помещаются в экран, текст читаемый, кнопки кликабельны.
+    - Повторить шаги для других устройств - iPhone 12 Pro, iPad Air.
     - Протестировать переходы по меню, работу форм, и отображение модальных окон.
   expected-result: |
     На всех проверенных устройствах:
@@ -78,7 +78,7 @@
     Корзина пустая. Открыта страница со списком доступных товаров.Текущий язык интерфейса: по умолчанию.
   test-data: |
     Товар: Essence Mascara Lash Princess
-    количество: 2
+    Количество: 2
   steps:
     - Переключить язык "Russian" в правом верхнем углу
     - Найти товар Essence Mascara Lash Princess
@@ -136,10 +136,7 @@
     - Нажать кнопку "В корзину" внутри модального окна.
     - Нажать кнопку "Корзина" в правом верхнем углу интерфейса.
   expected-result: |
-    В корзине отображаются оба товара:
-    - "Essence Mascara Lash Princess" с ценой 8.94 € и количеством 1.
-    - "Red Lipstick" с ценой 11.41 $ и количеством 1.
-    - Общая сумма отображается корректно 20.35$ с учетом валют и количества.
+    В корзине отображаются оба товара: "Essence Mascara Lash Princess" с ценой 8.94 € и количеством 1. "Red Lipstick" с ценой 11.41 $ и количеством 1. Общая сумма отображается корректно 20.35$ с учетом валют и количества.
 
 - summary: |
     Оформление заказа
@@ -272,15 +269,12 @@
     Выбранный бренд: Gucci
   steps:
     - Перейти в раздел "Каталог".
-    - Установить фильтр цен: от 1 до 3000.
+    - Установить фильтр цен - от 1 до 3000.
     - Выбрать бренд "Gucci" в панели фильтрации.
     - Подтвердить фильтр и дождаться обновления списка товаров.
   expected-result: |
-    В каталоге отображаются только те товары, которые:
-      - принадлежат бренду "Gucci";
-      - имеют цену от 1 до 3000;
-    Товары других брендов и/или за пределами указанного ценового диапазона не отображаются.
-    Фильтрация применяется корректно, без ошибок интерфейса.
+    В каталоге отображаются только те товары, которые: принадлежат бренду "Gucci"; имеют цену от 1 до 3000;
+    Товары других брендов и/или за пределами указанного ценового диапазона не отображаются. Фильтрация применяется корректно, без ошибок интерфейса.
 
 - summary: |
     Фильтрация по одной категории
@@ -384,9 +378,7 @@
     - Выбрать бренд "Gucci" в панели фильтрации.
     - Подтвердить фильтр и дождаться обновления списка товаров.
   expected-result: |
-    В каталоге отображаются только те товары, которые:
-      - принадлежат бренду "Gucci";
-      - имеют цену от 1 до 3000;
+    В каталоге отображаются только те товары, которые: принадлежат бренду "Gucci"; имеют цену от 1 до 3000;
     Товары других брендов и/или за пределами указанного ценового диапазона не отображаются.
     Фильтрация применяется корректно, без ошибок интерфейса.
 
@@ -548,18 +540,18 @@
   test-data: |
     Проверка визуального оформления существующего товара.
   steps:
-    - Визуально проверить наличие следующих элементов:
-      - Название товара;
-      - Изображение товара;
-      - Цена;
-      - Призыв к действию (например, кнопка "В корзину" или "Купить").
+    - Визуально проверить наличие следующих элементов
+    - Название товара;
+    - Изображение товара;
+    - Цена;
+    - Призыв к действию (например, кнопка "В корзину" или "Купить").
     - Убедиться, что все элементы корректно отображаются и не перекрываются.
   expected-result: |
     В карточке товара отображаются все необходимые элементы:
-      - Название товара читаемо и расположено корректно;
-      - Изображение товара отображается без искажений;
-      - Цена указана в понятном формате;
-      - Призыв к действию присутствует, визуально выделен и кликабелен.
+    Название товара читаемо и расположено корректно;
+    Изображение товара отображается без искажений;
+    Цена указана в понятном формате;
+    Призыв к действию присутствует, визуально выделен и кликабелен.
     Элементы не выходят за пределы карточки и корректно адаптированы под текущий интерфейс.
 
 
