Refactor test data formatting in test-cases.yml for consistency

--- a/test-cases.yml
+++ b/test-cases.yml
@@ -121,13 +121,13 @@
     Текущий язык интерфейса: по умолчанию.
   test-data: |
     Товар 1:
-      Название: Essence Mascara Lash Princess
-      Цена: 8.94 €
-      Количество: 1
+    Название: Essence Mascara Lash Princess
+    Цена: 8.94 €
+    Количество: 1
     Товар 2:
-      Название: Red Lipstick
-      Цена: 11.41 $
-      Количество: 1
+    Название: Red Lipstick
+    Цена: 11.41 $
+    Количество: 1
   steps:
     - Переключить язык интерфейса на "Russian" в правом верхнем углу страницы.
     - Найти товар "Red Lipstick" в списке товаров.
@@ -265,7 +265,7 @@
     Пользователь находится в разделе "Каталог" интернет-магазина.
     Все товары загружены. Доступна функциональность фильтрации по брендам и цене.
   test-data: |
-    Ценовой диапазон: от 1 до 3000
+    Ценовой диапазон - от 1 до 3000
     Выбранный бренд: Gucci
   steps:
     - Перейти в раздел "Каталог".
@@ -328,8 +328,8 @@
     Данные о товарах загружены. Фильтр цен доступен.
   test-data: |
     Ценовые диапазоны:
-      - от 1 до 6578
-      - от 3289 до 6578
+    от 1 до 6578
+    от 3289 до 6578
   steps:
     - Установить фильтр цен в диапазоне от 1 до 6578.
     - Дождаться обновления списка товаров.
@@ -349,12 +349,11 @@
   prerequisites: |
     Пользователь авторизован. Открыт раздел "Каталог" интернет-магазина. Все товары загружены.
   test-data: |
-    Ценовой диапазон:
-      - от 0 до 6579
+    Ценовой диапазон - от 0 до 6579
   steps:
     - Перейти в раздел "Каталог".
     - Найти блок фильтрации товаров по цене.
-    - Установить значения: минимальная цена — 0, максимальная — 6579.
+    - минимальная цена — 0, максимальная — 6579.
     - Подтвердить фильтр и дождаться обновления списка товаров.
   expected-result: |
     Фильтр применяется без ошибок.
@@ -374,7 +373,7 @@
     Выбранный бренд: Gucci
   steps:
     - Перейти в раздел "Каталог".
-    - Установить фильтр цен: от 1 до 3000.
+    - Установить фильтр цен - от 1 до 3000.
     - Выбрать бренд "Gucci" в панели фильтрации.
     - Подтвердить фильтр и дождаться обновления списка товаров.
   expected-result: |
