Refactor test case descriptions and requirements for clarity and consistency

--- a/test-cases.yml
+++ b/test-cases.yml
@@ -73,27 +73,23 @@
 - summary: |
     Добавление товара в пустую корзину 
   requirement: |
-    После нажатия кнопки "В корзину" пользователь должен видеть модальное окно с вводом количества товара, подтверждением добавления и возможностью оформить заказ.
+    После нажатия кнопки "В корзину" товар должен отображаться в списке корзины
   prerequisites: |
     Корзина пустая. Открыта страница со списком доступных товаров.Текущий язык интерфейса: по умолчанию.
   test-data: |
     Товар: Essence Mascara Lash Princess
-    Количество: 2
   steps:
     - Переключить язык "Russian" в правом верхнем углу
     - Найти товар Essence Mascara Lash Princess
     - Нажать кнопку "В корзину" рядом с этим товаром
-    - В модальном окне ввести количество 2
-    - Нажать кнопку "В корзину" внутри модального окна
-    - Убедиться, что появилось окно с подтверждением добавления, количеством товара и кнопкой "Заказать"
     - Нажать кнопку "Корзина" в правом верхнем углу
   expected-result: |
-    В корзине отображается товар "Essence Mascara Lash Princess" в количестве 2 штук
+    В корзине отображается товар "Essence Mascara Lash Princess"
 
 - summary: |
-    Проверка успешного добавления товара в корзину и корректного отображения информации
+    Проверка поялвения модального окна при добавлении товара в корзину
   requirement: |
-    При добавлении товаров в корзину отображается количество товара, название, цена, общая сумма
+    При добавлении товаров в корзину появляется модальное окно с возможностью указать количество товара
   prerequisites: |
     Корзина пуста. Открыта страница со списком доступных товаров.Текущий язык интерфейса: по умолчанию.
   test-data: |
@@ -101,23 +97,23 @@
     Цена: 8,94$
     Количество: 2
   steps:
-    - Переключить язык "Russian" в правом верхнем углу
-    - Найти товар Essence Mascara Lash Princess
-    - Нажать кнопку "В корзину" рядом с этим товаром
-    - В модальном окне ввести количество 2
-    - Нажать кнопку "В корзину" внутри модального окна
-    - Нажать кнопку "Корзина" в правом верхнем углу
+    - Переключить язык интерфейса на "Russian" в правом верхнем углу.
+    - Найти товар "Essence Mascara Lash Princess" в каталоге.
+    - Нажать кнопку "В корзину" рядом с этим товаром.
+    - Убедиться, что появилось модальное окно.
+    - Ввести количество "2" в соответствующее поле.
   expected-result: |
-    В корзине отображается товар "Essence Mascara Lash Princess" с ценой 8.94$.
-    Отображается количество "2", указанное на предыдущем шаге.
-    Рассчитывается и выводится общая сумма: 17,88$.
+    После нажатия кнопки "В корзину" появляется модальное окно.
+    В модальном окне отображается информация о товаре: название, цена.
+    Поле для ввода количества доступно и принимает значение "2".
+    Пользователь может подтвердить добавление товара в корзину. 
 
 - summary: |
     Проверка успешного добавления нескольких товаров в корзину и корректного отображения информации о заказе
   requirement: |
     После добавления нескольких товаров в корзину должна отображаться полная информация о каждом товаре — название, цена, количество — а также корректно рассчитанная общая сумма заказа.
   prerequisites: |
-    Пользователь авторизован. В корзине уже присутствует один товар.
+    В корзине уже присутствует один товар.
     Текущий язык интерфейса: по умолчанию.
   test-data: |
     Товар 1:
@@ -132,8 +128,6 @@
     - Переключить язык интерфейса на "Russian" в правом верхнем углу страницы.
     - Найти товар "Red Lipstick" в списке товаров.
     - Нажать кнопку "В корзину" рядом с этим товаром.
-    - В модальном окне указать количество "1".
-    - Нажать кнопку "В корзину" внутри модального окна.
     - Нажать кнопку "Корзина" в правом верхнем углу интерфейса.
   expected-result: |
     В корзине отображаются оба товара: "Essence Mascara Lash Princess" с ценой 8.94 € и количеством 1. "Red Lipstick" с ценой 11.41 $ и количеством 1. Общая сумма отображается корректно 20.35$ с учетом валют и количества.
@@ -334,7 +328,6 @@
     - Установить фильтр цен в диапазоне от 1 до 6578.
     - Дождаться обновления списка товаров.
     - Проверить, что отображаются только товары с ценой от 1 до 6578.
-    - Сбросить фильтр.
     - Установить новый диапазон от 3289 до 6578.
     - Проверить, что отображаются только товары с ценой от 3289 до 6578.
   expected-result: |
@@ -347,7 +340,7 @@
   requirement: |
     Система должна корректно обрабатывать некорректные или граничные значения фильтра по цене, исключая товары вне допустимого диапазона и предотвращая ошибки отображения.
   prerequisites: |
-    Пользователь авторизован. Открыт раздел "Каталог" интернет-магазина. Все товары загружены.
+    Открыт раздел "Каталог" интернет-магазина. Все товары загружены.
   test-data: |
     Ценовой диапазон - от 0 до 6579
   steps:
@@ -486,7 +479,7 @@
     Элемент управления: Кнопка "Следующая"
   steps:
     - Убедиться, что отображается первая страница товаров.
-    - Нажать кнопку "Следующая" в нижней части страницы.
+    - Нажать кнопку "Следующая"
     - Дождаться загрузки следующей страницы каталога.
   expected-result: |
     Загружается вторая страница каталога.
