--- a/testing-report.yml
+++ b/testing-report.yml
@@ -1,26 +1,46 @@
 ---
 - summary: |
-    Проверка входа пользователя с существующими логином и паролем
-  status: fail
-
-- summary: |
-    Проверка входа пользователя с несуществующими логином и паролем
-  status: fail
-
-- summary: |
-    Успешная регистрация пользователя
-  status: fail
-
-- summary: |
-    Добавление товара в корзину
-  status: fail
-
-- summary: |
-    Успешное добавление товара в корзину
+     Проверка использования защищённого протокола HTTPS на главной странице интернет-магазина
   status: pass
 
 - summary: |
-    Успешное добавление нескольких товаров в корзину
+    Проверка адаптивности дизайна интернет-магазина на разных устройствах
+  status: fail
+
+- summary: |
+    Проверка на совместимость с последней версией браузера
+  status: pass
+
+- summary: |
+    Проверка языка интерфейса, загружаемого по умолчанию при первом посещении интернет-магазина
+  status: fail
+
+- summary: |
+    Добавление товара в пустую корзину
+  status: pass
+
+- summary: |
+    Проверка поялвения модального окна при добавлении товара в корзину
+  status: fail
+
+- summary: |
+    Проверка успешного добавления нескольких товаров в корзину и корректного отображения информации о заказе
+  status: pass
+
+- summary: |
+    Оформление заказа
+  status: fail
+
+- summary: |
+    Изменение состава заказа на этапе оформления
+  status: fail
+
+- summary: |
+    Статус заказа
+  status: fail
+
+- summary: |
+    Проверка удаление товаров из корзины
   status: pass
 
 - summary: |
@@ -28,16 +48,16 @@
   status: fail
 
 - summary: |
-    Фильтрация по одному бренду
+    Проверка корректной фильтрации товаров по бренду в каталоге интернет-магазина
   status: pass
 
 - summary: |
-    Множественный выбор бренда
+    Проверка фильтрации каталога интернет-магазина при выборе нескольких брендов
   status: pass 
 
 - summary: |
-    Сброс фильтра
-  status: fail
+    Проверка корректной фильтрации товаров по диапазону цен и выбранному бренду
+  status: pass
 
 - summary: |
     Фильтрация по одной категории
@@ -49,18 +69,18 @@
 
 - summary: |
     Комбинация фильтров
-  status: fail
-
-- summary: |
-    Фильтрация цены
   status: pass
 
 - summary: |
-    Фильтрация некорректной цены
-  status: fail
+    Проверка корректной работы фильтрации товаров по ценовому диапазону
+  status: pass
 
 - summary: |
-    Диапазон цен + другие фильтры
+    Проверка обработки некорректного значения при фильтрации товаров по цене
+  status: pass
+
+- summary: |
+    Проверка корректной фильтрации товаров по диапазону цен и выбранному бренду
   status: pass
 
 - summary: |
@@ -92,25 +112,20 @@
   status: fail
 
 - summary: |
-    Переход на следующую страницу
+    Проверка корректной работы пагинации при переходе на следующую страницу каталога
+  status: fail
+
+- summary: |
+    Проверка корректной работы пагинации при переходе на предыдущую страницу каталога товаров
+  status: fail
+
+- summary: |
+    Проверка сохранения активных фильтров при переходе на следующую страницу каталога
+  status: fail
+
+- summary: |
+    Проверка корректного отображения информации и элементов в карточке товара
   status: pass
 
-- summary: |
-    Возврат на предыдущую страницу
-  status: pass
 
-- summary: |
-    Сохранение фильтров при переключении
-  status: fail
 
-- summary: |
-    Оформление заказа
-  status: fail
-
-- summary: |
-    Изменение состава заказа на этапе оформления
-  status: fail
-
-- summary: |
-    Статус заказа
-  status: fail
