Update bug reports

--- a/bugreports.yml
+++ b/bugreports.yml
@@ -16,7 +16,7 @@
     Модальное окно отсутствует, товар сразу добавляется в корзину  
 
 - summary: |
-    Некорретная работа переключения языка
+    При выборе языка "Russia", язык не поменялся в категориях, названии товаров и в карточке товаров
   environment: |
      Google Chrome 136.0.7103.114 (Официальная сборка) (64 бит)
      Windows 11
@@ -26,9 +26,41 @@
     3. Выбрать "Russian"
     4. Нажать кнопку "Категория" в фильтре
   expected-result: |
-    Открывается список категорий на русском языке
+    Язык поменялся на всем сайте
   actual-result: |
     Сайт на русском, категории отображаются на английском. Ошибка изображена на скриншоте баг локализация.png
+
+- summary: |
+    На различных устройствах функционал и элементы не помещаются в экран и отображатся некорректно
+  environment: |
+     Google Chrome 136.0.7103.114 (Официальная сборка) (64 бит)
+     Windows 11
+  steps-to-reproduce: |
+    1. Открыть сайт https://hexlet-products-store.vercel.app/
+    2. Нажать F12 или Cntrl+Shift+I
+    3. Нажать на режим адаптивного дизайна
+    4. Выбрать устройство Ipad,iphone
+  expected-result: |
+    функционал и элементы помещаются в экран и отображатся корректно
+  actual-result: |
+    На устройстве Ipad Графа "Поиск" вылазиет за пределы границ. 
+    На устройстве Ipad Графа "Цена" и изображение товара выглядят не корректно. 
+    На устройстве Iphone все элементы полностью не соответсвуют адаптивности. 
+
+- summary: |
+    Сайт не доступен в мобильной версии 
+  environment: |
+    Google Chrome 136.0.7103.114 (Официальная сборка) (64 бит)
+    Windows 11
+  steps-to-reproduce: |
+    1. Открыть сайт https://hexlet-products-store.vercel.app/
+    2. Нажать F12 или Cntrl+Shift+I
+    3. Нажать на режим адаптивного дизайна
+    4. Выбрать устройство Iphone X
+  expected-result: |
+    функционал и элементы помещаются в экран и отображатся корректно
+  actual-result: |
+    функционал и элементы не помещаются на эран мобильного устройства 
 
 - summary: |
     Категории поиска работают только по текущей странице
@@ -81,6 +113,24 @@
     Выводятся все товары из этой категории
   actual-result: |
     Выводится сообщение "Ничего не найдено"
+
+- summary: |
+    При оформлении заказа приходит статус запроса с кодом 500 
+  environment: |
+    Google Chrome 136.0.7103.114 (Официальная сборка) (64 бит)
+    Windows 11
+  steps-to-reproduce: |
+    1. Открыть сайт https://hexlet-products-store.vercel.app/
+    2. Добавить любой товар в корзину
+    3. Перейти в корзину
+    4. Нажать на "Оформить заказ"
+    5. Проверяем что появилось уведомлении о том, что заказ успешно оформлен
+    6. Открыть Devtools
+    7. Во вкладке Network Посмотреть статут запроса
+  expected-result: |
+    При оформлении заказа,заказ успешно оформляется, запрос с сервера возвращается без ошибок
+  actual-result: |
+   При офрмлении заказа во владке Network приходит статус запроса с кодом 500
 
 - summary: |
     При переключении страниц происходит смена параметров в фильтре
