Refactor test cases in regress-report.yml

--- a/regress-report.yml
+++ b/regress-report.yml
@@ -1,27 +1,47 @@
 ---
 test-cases:
 - summary: |
-    Проверка входа пользователя с существующими логином и паролем
-  status: fail
-
-- summary: |
-    Проверка входа пользователя с несуществующими логином и паролем
-  status: fail
-
-- summary: |
-    Успешная регистрация пользователя
-  status: fail
-
-- summary: |
-    Добавление товара в корзину
-  status: fail
-
-- summary: |
-    Успешное добавление товара в корзину
+     Проверка использования защищённого протокола HTTPS на главной странице интернет-магазина
   status: pass
 
 - summary: |
-    Успешное добавление нескольких товаров в корзину
+    Проверка адаптивности дизайна интернет-магазина на разных устройствах
+  status: fail
+
+- summary: |
+    Проверка на совместимость с последней версией браузера
+  status: pass
+
+- summary: |
+    Проверка языка интерфейса, загружаемого по умолчанию при первом посещении интернет-магазина
+  status: fail
+
+- summary: |
+    Добавление товара в пустую корзину
+  status: pass
+
+- summary: |
+    Проверка поялвения модального окна при добавлении товара в корзину
+  status: fail
+
+- summary: |
+    Проверка успешного добавления нескольких товаров в корзину и корректного отображения информации о заказе
+  status: pass
+
+- summary: |
+    Оформление заказа
+  status: fail
+
+- summary: |
+    Изменение состава заказа на этапе оформления
+  status: fail
+
+- summary: |
+    Статус заказа
+  status: fail
+
+- summary: |
+    Проверка удаление товаров из корзины
   status: pass
 
 - summary: |
@@ -29,15 +49,15 @@ test-cases:
   status: fail
 
 - summary: |
-    Фильтрация по одному бренду
+    Проверка корректной фильтрации товаров по бренду в каталоге интернет-магазина
   status: pass
 
 - summary: |
-    Множественный выбор бренда
+    Проверка фильтрации каталога интернет-магазина при выборе нескольких брендов
   status: pass 
 
 - summary: |
-    Сброс фильтра
+    Проверка корректной фильтрации товаров по диапазону цен и выбранному бренду
   status: fail
 
 - summary: |
@@ -46,22 +66,22 @@ test-cases:
 
 - summary: |
     Фильтрация товаров в наличии
-  status: fail
+  status: pass
 
 - summary: |
     Комбинация фильтров
   status: fail
 
 - summary: |
-    Фильтрация цены
+    Проверка корректной работы фильтрации товаров по ценовому диапазону
   status: fail
 
 - summary: |
-    Фильтрация некорректной цены
+    Проверка обработки некорректного значения при фильтрации товаров по цене
   status: fail
 
 - summary: |
-    Диапазон цен + другие фильтры
+    Проверка корректной фильтрации товаров по диапазону цен и выбранному бренду
   status: fail
 
 - summary: |
@@ -86,35 +106,27 @@ test-cases:
 
 - summary: |
     Поиск несуществующего товара
-  status: fail
+  status: pass
 
 - summary: |
     Автодополнение в поиске
   status: fail
 
 - summary: |
-    Переход на следующую страницу
+    Проверка корректной работы пагинации при переходе на следующую страницу каталога
+  status: fail
+
+- summary: |
+    Проверка корректной работы пагинации при переходе на предыдущую страницу каталога товаров
+  status: fail
+
+- summary: |
+    Проверка сохранения активных фильтров при переходе на следующую страницу каталога
+  status: fail
+
+- summary: |
+    Проверка корректного отображения информации и элементов в карточке товара
   status: pass
-
-- summary: |
-    Возврат на предыдущую страницу
-  status: pass
-
-- summary: |
-    Сохранение фильтров при переключении
-  status: fail
-
-- summary: |
-    Оформление заказа
-  status: fail
-
-- summary: |
-    Изменение состава заказа на этапе оформления
-  status: fail
-
-- summary: |
-    Статус заказа
-  status: fail
 
 - summary: |
     Присутствуют производители без title
