--- a/requirements.yml
+++ b/requirements.yml
@@ -4,6 +4,9 @@ functional:
   - Пользователь должен иметь возможность фильтровать товары
   - Пользователь должен иметь возможность просматривать товары и подробную информацию о товаре
   - Пользователь должен иметь возможность добавлять товары в корзину и просматривать содержимое корзины
+  - Пользователь может удалять товары из корзины
+  - Пользователь может оформлять заказ с переходом на страницу оплаты
+  - На странице товара и в каталоге отображается - название, рейтинг, цена со скидкой и без неё
   - Пользователь должен иметь возможность переключить язык интерфейса
   - Сайт должен иметь локализацию (перевод) на русский и английский языки
 non-functional:
@@ -22,9 +25,6 @@ implicit:
   - Выводится список товаров
   - У каждого товара указана цена
   - У каждого товара есть кнопка для заказа товара
-  - При нажатии на кнопку заказа товара открывается модальное окно, где можно ввести количество товара
-  - В модальном окне с вводом количества есть кнопка подтверждения заказа
-  - В модальном окне с вводом количества есть кнопка отмены заказа
   - Выводится список заказов
   - Для каждого заказа выводится дата заказа
   - Для каждого заказа выводится общая сумма заказа
